test/neg/neg-broadcast1.errc
Only TriviallySerializable types permitted for .upcxx::broadcast.
